--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
+    "graphology": "^0.26.0",
+    "graphology-components": "^1.5.4",
     "lodash": "^4.17.21"
   }
 }
